Introduce a little BEM naming convention.

--- a/food-oasis.html
+++ b/food-oasis.html
@@ -7,8 +7,8 @@ title: Food Oasis Los Angeles
 
   <div class="banner" style="background-image: url(/images/projects/food-oasis-responsive.jpg); background-position: 25% 50%;">
     <div>
-      <h1>Food Oasis <span class="phrase">Los Angeles</span></h1>
-      <p class="with">with the volunteers at <a href="http://hackforla.nationbuilder.com/about" class="phrase">Code for America</a></p>
+      <h1 class="banner__title">Food Oasis <span class="phrase">Los Angeles</span></h1>
+      <p class="banner__with">with the volunteers at <a href="http://hackforla.nationbuilder.com/about" class="phrase">Code for America</a></p>
     </div>
   </div>
 
@@ -155,8 +155,8 @@ title: Food Oasis Los Angeles
     <div>
       <h2>Next project →</h2>
     </div>
-    <div>
-      <h1>CTZN App</h1>
-      <p class="with">with the team at <span class="phrase">GOOD Worldwide</span></p>
+    <div class="banner__title-container">
+      <h1 class="banner__title">CTZN App</h1>
+      <p class="banner__with">with the team at <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
