--- a/good-community.html
+++ b/good-community.html
@@ -7,8 +7,8 @@ title: GOOD Community
 
   <div class="banner" style="background-image: url(/images/projects/good-community.png); background-position: 2% 50%;">
     <div>
-      <h1>GOOD Community</h1>
-      <p class="with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+      <h1 class="banner__title">GOOD Community</h1>
+      <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
   </div>
 
@@ -124,8 +124,8 @@ title: GOOD Community
     <div>
       <h2>Next project →</h2>
     </div>
-    <div>
-      <h1>OK the Store</h1>
-      <p class="with">with the team at <span class="phrase">Barrel Strength Design</span></p>
+    <div class="banner__title-container">
+      <h1 class="banner__title">OK the Store</h1>
+      <p class="banner__with">with the team at <span class="phrase">Barrel Strength Design</span></p>
     </div>
   </a>
