--- a/good.html
+++ b/good.html
@@ -7,8 +7,8 @@ title: GOOD Worldwide
 
   <div class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
     <div>
-      <h1>GOOD Worldwide</h1>
-      <p class="with">with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+      <h1 class="banner__title">GOOD Worldwide</h1>
+      <p class="banner__with">with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
     <p class="credit"><a href="http://www.musiccenter.org">Photo by <span>The Music Center</span></a></p>
   </div>
@@ -114,8 +114,8 @@ title: GOOD Worldwide
     <div>
       <h2>Next project →</h2>
     </div>
-    <div>
-      <h1>Food Oasis <span class="phrase">Los Angeles</span></h1>
-      <p class="with">with the volunteers at <span class="phrase">Code for America</span></p>
+    <div class="banner__title-container">
+      <h1 class="banner__title">Food Oasis <span class="phrase">Los Angeles</span></h1>
+      <p class="banner__with">with the volunteers at <span class="phrase">Code for America</span></p>
     </div>
   </a>
