--- a/jj-burns.html
+++ b/jj-burns.html
@@ -7,8 +7,8 @@ title: JJ Burns
 
   <div class="banner" style="background-image: url(/images/projects/jj-burns.jpg); background-position: left;">
     <div>
-      <h1>JJ Burns &amp; Company</h1>
-      <p class="with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
+      <h1 class="banner__title">JJ Burns &amp; Company</h1>
+      <p class="banner__with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
     </div>
   </div>
 
@@ -97,8 +97,8 @@ title: JJ Burns
     <div>
       <h2>Next project →</h2>
     </div>
-    <div>
-      <h1>Fahrenheit Studio</h1>
-      <p class="with">with the team at <span class="phrase">Fahrenheit Studio</span></p>
+    <div class="banner__title-container">
+      <h1 class="banner__title">Fahrenheit Studio</h1>
+      <p class="banner__with">with the team at <span class="phrase">Fahrenheit Studio</span></p>
     </div>
   </a>
