--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -7,8 +7,8 @@ title: CTZN App
 
   <div class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg)">
     <div>
-      <h1>CTZN App</h1>
-      <p class="with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+      <h1 class="banner__title">CTZN App</h1>
+      <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
     <p class="credit"><a href="https://www.linkedin.com/in/benisonchoi">Photo by <span>Benison Choi</span></a></p>
   </div>
@@ -143,8 +143,8 @@ title: CTZN App
     <div>
       <h2>Next project →</h2>
     </div>
-    <div>
-      <h1>GOOD Community</h1>
-      <p class="with">with the team at <span class="phrase">GOOD Worldwide</span></p>
+    <div class="banner__title-container">
+      <h1 class="banner__title">GOOD Community</h1>
+      <p class="banner__with">with the team at <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
