--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -7,8 +7,8 @@ title: Fahrenheit Studio
 
   <div class="banner" style="background-image: url(/images/projects/fahrenheit.jpg); background-position: 25% 50%;">
     <div>
-      <h1>Fahrenheit Studio</h1>
-      <p class="with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
+      <h1 class="banner__title">Fahrenheit Studio</h1>
+      <p class="banner__with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
     </div>
   </div>
 
@@ -94,8 +94,8 @@ title: Fahrenheit Studio
     <div>
       <h2>Next project →</h2>
     </div>
-    <div>
-      <h1>GOOD Fest</h1>
-      <p class="with">with the team at <span class="phrase">GOOD Worldwide,</span> <span class="phrase">sponsored by Google</span></p>
+    <div class="banner__title-container">
+      <h1 class="banner__title">GOOD Fest</h1>
+      <p class="banner__with">with the team at <span class="phrase">GOOD Worldwide,</span> <span class="phrase">sponsored by Google</span></p>
     </div>
   </a>
