--- a/good-fest.html
+++ b/good-fest.html
@@ -7,8 +7,8 @@ title: GOOD Fest
 
   <div class="banner" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
     <div>
-      <h1>GOOD Fest</h1>
-      <p class="with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a>, <span class="phrase">sponsored by Google</span></p>
+      <h1 class="banner__title">GOOD Fest</h1>
+      <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a>, <span class="phrase">sponsored by Google</span></p>
     </div>
   </div>
 
@@ -156,8 +156,8 @@ title: GOOD Fest
     <div>
       <h2>Next project →</h2>
     </div>
-    <div>
-      <h1>4th of July <span class="phrase">at Grand Park</span></h1>
-      <p class="with">with the team at <span class="phrase">The Music Center</span></p>
+    <div class="banner__title-container">
+      <h1 class="banner__title">4th of July <span class="phrase">at Grand Park</span></h1>
+      <p class="banner__with">with the team at <span class="phrase">The Music Center</span></p>
     </div>
   </a>
