--- a/grand-park.html
+++ b/grand-park.html
@@ -7,8 +7,8 @@ title: 4th of July at Grand Park
 
   <div class="banner" style="background-image: url(/images/projects/july4-responsive.jpg); background-position: 25% 50%;">
     <div>
-      <h1>4th of July <span class="phrase">at Grand Park</span></h1>
-      <p class="with">with the team at <a href="https://www.musiccenter.org">The Music Center</a></p>
+      <h1 class="banner__title">4th of July <span class="phrase">at Grand Park</span></h1>
+      <p class="banner__with">with the team at <a href="https://www.musiccenter.org">The Music Center</a></p>
     </div>
   </div>
 
@@ -101,8 +101,8 @@ title: 4th of July at Grand Park
     <div>
       <h2>Next project →</h2>
     </div>
-    <div>
-      <h1>10 Days of Lending</h1>
-      <p class="with">with the teams at Kiva and <span class="phrase">GOOD Worldwide</span></p>
+    <div class="banner__title-container">
+      <h1 class="banner__title">10 Days of Lending</h1>
+      <p class="banner__with">with the teams at Kiva and <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
