--- a/index.html
+++ b/index.html
@@ -38,79 +38,79 @@ class: home
   <ul class="projects">
     <li>
       <a href="/good-fest" class="banner" style="background-image: url(/images/projects/goodfest-shows.png); background-position: bottom;">
-        <div>
-          <h3>GOOD Fest</h3>
-          <p>Google &amp; GOOD Worldwide</p>
+        <div class="banner__title-container">
+          <h3 class="banner__title">GOOD Fest</h3>
+          <p class="banner__with">Google &amp; GOOD Worldwide</p>
         </div>
       </a>
     </li>
     <li>
       <a href="/grand-park" class="banner" style="background-image: url(/images/projects/july4.png)">
-        <div>
-          <h3>4th of July <span class="phrase">at Grand Park</span></h3>
-          <p><span class="phrase">The Music Center</span></p>
+        <div class="banner__title-container">
+          <h3 class="banner__title">4th of July <span class="phrase">at Grand Park</span></h3>
+          <p class="banner__with"><span class="phrase">The Music Center</span></p>
         </div>
       </a>
     </li>
     <li>
       <a href="/kiva" class="banner" style="background-image: url(/images/projects/kiva-timeline.png)">
-        <div>
-          <h3>10 Days of Lending</h3>
-          <p>PayPal, Kiva, &amp; GOOD Worldwide</p>
+        <div class="banner__title-container">
+          <h3 class="banner__title">10 Days of Lending</h3>
+          <p class="banner__with">PayPal, Kiva, &amp; GOOD Worldwide</p>
         </div>
       </a>
     </li>
     <li>
       <a href="/good" class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
-        <div>
-          <h3>GOOD Worldwide</h3>
-          <p><span class="phrase">Type/Code</span></p>
+        <div class="banner__title-container">
+          <h3 class="banner__title">GOOD Worldwide</h3>
+          <p class="banner__with"><span class="phrase">Type/Code</span></p>
         </div>
       </a>
     </li>
     <li>
       <a href="/food-oasis" class="banner" style="background-image: url(/images/projects/food-oasis-map.png)">
-        <div>
-          <h3>Food Oasis <span class="phrase">Los Angeles</span></h3>
-          <p><span class="phrase">Code for America</span></p>
+        <div class="banner__title-container">
+          <h3 class="banner__title">Food Oasis <span class="phrase">Los Angeles</span></h3>
+          <p class="banner__with"><span class="phrase">Code for America</span></p>
         </div>
       </a>
     </li>
     <li>
       <a href="/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
-        <div>
-          <h3>CTZN App</h3>
-          <p><span class="phrase">GOOD Worldwide</span></p>
+        <div class="banner__title-container">
+          <h3 class="banner__title">CTZN App</h3>
+          <p class="banner__with"><span class="phrase">GOOD Worldwide</span></p>
         </div>
       </a>
     </li>
     <li>
       <a href="/good-community" class="banner" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: -30px 50%;">
-        <div>
-          <h3>GOOD Community</h3>
+        <div class="banner__title-container">
+          <h3 class="banner__title">GOOD Community</h3>
         </div>
       </a>
     </li>
     <li>
       <a href="/ok-the-store" class="banner" style="background-image: url(/images/projects/ok-the-store-pencils.jpg)">
-        <div>
-          <h3>OK the Store</h3>
-          <p><span class="phrase">Barrel Strength Design</span></p>
+        <div class="banner__title-container">
+          <h3 class="banner__title">OK the Store</h3>
+          <p class="banner__with"><span class="phrase">Barrel Strength Design</span></p>
         </div>
       </a>
     </li>
     <li>
       <a href="/jj-burns" class="banner" style="background-image: url(/images/projects/fahrenheit-jjburns.jpg); background-position: 2% 50%;">
-        <div>
-          <h3>JJ Burns &amp; Company</h3>
-          <p><span class="phrase">Fahrenheit Studio</span></p>
+        <div class="banner__title-container">
+          <h3 class="banner__title">JJ Burns &amp; Company</h3>
+          <p class="banner__with"><span class="phrase">Fahrenheit Studio</span></p>
         </div>
       </a>
     </li>
     <li>
       <a href="/fahrenheit" class="banner" style="background-image: url(/images/projects/fahrenheit-zansaar.jpg)">
-        <div>
-          <h3>Fahrenheit Studio</h3>
+        <div class="banner__title-container">
+          <h3 class="banner__title">Fahrenheit Studio</h3>
         </div>
       </a>
     </li>
