--- a/kiva.html
+++ b/kiva.html
@@ -7,8 +7,8 @@ title: 10 Days of Lending
 
   <div class="banner" style="background-image: url(/images/projects/kiva-paypal-responsive.jpg); background-position: 25% 50%;">
     <div>
-      <h1>10 Days of Lending</h1>
-      <p class="with">with the teams at <a href="https://www.paypal.com/stories/us/paypal-kiva-celebrating-ten-years-of-making-a-difference">PayPal</a>, <a href="https://www.kiva.org">Kiva</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+      <h1 class="banner__title">10 Days of Lending</h1>
+      <p class="banner__with">with the teams at <a href="https://www.paypal.com/stories/us/paypal-kiva-celebrating-ten-years-of-making-a-difference">PayPal</a>, <a href="https://www.kiva.org">Kiva</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
   </div>
 
@@ -83,8 +83,8 @@ title: 10 Days of Lending
     <div>
       <h2>Next project →</h2>
     </div>
-    <div>
-      <h1>GOOD Worldwide</h1>
-      <p class="with">with the teams at <span class="phrase">Type/Code</span> and <span class="phrase">GOOD Worldwide</span></p>
+    <div class="banner__title-container">
+      <h1 class="banner__title">GOOD Worldwide</h1>
+      <p class="banner__with">with the teams at <span class="phrase">Type/Code</span> and <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
