--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -7,8 +7,8 @@ title: OK the Store
 
   <div class="banner" style="background-image: url(/images/projects/ok-the-store.jpg)">
     <div>
-      <h1>OK the Store</h1>
-      <p class="with">with the team at <a href="https://barrelstrengthdesign.com">Barrel Strength Design</a></p>
+      <h1 class="banner__title">OK the Store</h1>
+      <p class="banner__with">with the team at <a href="https://barrelstrengthdesign.com">Barrel Strength Design</a></p>
     </div>
   </div>
 
@@ -93,8 +93,8 @@ title: OK the Store
     <div>
       <h2>Next project →</h2>
     </div>
-    <div>
-      <h1>JJ Burns &amp; Company</h1>
-      <p class="with">with the team at <span class="phrase">Fahrenheit Studio</span></p>
+    <div class="banner__title-container">
+      <h1 class="banner__title">JJ Burns &amp; Company</h1>
+      <p class="banner__with">with the team at <span class="phrase">Fahrenheit Studio</span></p>
     </div>
   </a>
