Use a little more BEM.

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -5,8 +5,8 @@ title: CTZN App
 
 {% include ahoy.html %}
 
-  <div class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg)">
-    <div>
+  <div class="banner banner_details" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg)">
+    <div class="banner__title-container">
       <h1 class="banner__title">CTZN App</h1>
       <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
@@ -139,9 +139,9 @@ title: CTZN App
 
   </div>
 
-  <a href="/good-community" class="banner next" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: 2% 50%;">
-    <div>
-      <h2>Next project →</h2>
+  <a href="/good-community" class="banner banner_next" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: 2% 50%;">
+    <div class="banner__next-project-container">
+      <h2 class="banner__next-project">Next project →</h2>
     </div>
     <div class="banner__title-container">
       <h1 class="banner__title">GOOD Community</h1>
