--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -5,8 +5,8 @@ title: Fahrenheit Studio
 
 {% include ahoy.html %}
 
-  <div class="banner" style="background-image: url(/images/projects/fahrenheit.jpg); background-position: 25% 50%;">
-    <div>
+  <div class="banner banner_details" style="background-image: url(/images/projects/fahrenheit.jpg); background-position: 25% 50%;">
+    <div class="banner__title-container">
       <h1 class="banner__title">Fahrenheit Studio</h1>
       <p class="banner__with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
     </div>
@@ -90,9 +90,9 @@ title: Fahrenheit Studio
 
   </div>
 
-  <a href="/good-fest" class="banner next" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
-    <div>
-      <h2>Next project →</h2>
+  <a href="/good-fest" class="banner banner_next" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
+    <div class="banner__next-project-container">
+      <h2 class="banner__next-project">Next project →</h2>
     </div>
     <div class="banner__title-container">
       <h1 class="banner__title">GOOD Fest</h1>
