--- a/food-oasis.html
+++ b/food-oasis.html
@@ -5,8 +5,8 @@ title: Food Oasis Los Angeles
 
 {% include ahoy.html %}
 
-  <div class="banner" style="background-image: url(/images/projects/food-oasis-responsive.jpg); background-position: 25% 50%;">
-    <div>
+  <div class="banner banner_details" style="background-image: url(/images/projects/food-oasis-responsive.jpg); background-position: 25% 50%;">
+    <div class="banner__title-container">
       <h1 class="banner__title">Food Oasis <span class="phrase">Los Angeles</span></h1>
       <p class="banner__with">with the volunteers at <a href="http://hackforla.nationbuilder.com/about" class="phrase">Code for America</a></p>
     </div>
@@ -151,9 +151,9 @@ title: Food Oasis Los Angeles
 
   </div>
 
-  <a href="/ctzn-app" class="banner next" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
-    <div>
-      <h2>Next project →</h2>
+  <a href="/ctzn-app" class="banner banner_next" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
+    <div class="banner__next-project-container">
+      <h2 class="banner__next-project">Next project →</h2>
     </div>
     <div class="banner__title-container">
       <h1 class="banner__title">CTZN App</h1>
