--- a/good-community.html
+++ b/good-community.html
@@ -5,8 +5,8 @@ title: GOOD Community
 
 {% include ahoy.html %}
 
-  <div class="banner" style="background-image: url(/images/projects/good-community.png); background-position: 2% 50%;">
-    <div>
+  <div class="banner banner_details" style="background-image: url(/images/projects/good-community.png); background-position: 2% 50%;">
+    <div class="banner__title-container">
       <h1 class="banner__title">GOOD Community</h1>
       <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
@@ -120,9 +120,9 @@ title: GOOD Community
 
   </div>
 
-  <a href="/ok-the-store" class="banner next" style="background-image: url(/images/projects/ok-the-store.jpg)">
-    <div>
-      <h2>Next project →</h2>
+  <a href="/ok-the-store" class="banner banner_next" style="background-image: url(/images/projects/ok-the-store.jpg)">
+    <div class="banner__next-project-container">
+      <h2 class="banner__next-project">Next project →</h2>
     </div>
     <div class="banner__title-container">
       <h1 class="banner__title">OK the Store</h1>
