--- a/good.html
+++ b/good.html
@@ -5,8 +5,8 @@ title: GOOD Worldwide
 
 {% include ahoy.html %}
 
-  <div class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
-    <div>
+  <div class="banner banner_details" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
+    <div class="banner__title-container">
       <h1 class="banner__title">GOOD Worldwide</h1>
       <p class="banner__with">with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
@@ -110,9 +110,9 @@ title: GOOD Worldwide
 
   </div>
 
-  <a href="/food-oasis" class="banner next" style="background-image: url(/images/projects/food-oasis.jpg);">
-    <div>
-      <h2>Next project →</h2>
+  <a href="/food-oasis" class="banner banner_next" style="background-image: url(/images/projects/food-oasis.jpg);">
+    <div class="banner__next-project-container">
+      <h2 class="banner__next-project">Next project →</h2>
     </div>
     <div class="banner__title-container">
       <h1 class="banner__title">Food Oasis <span class="phrase">Los Angeles</span></h1>
