--- a/kiva.html
+++ b/kiva.html
@@ -5,8 +5,8 @@ title: 10 Days of Lending
 
 {% include ahoy.html %}
 
-  <div class="banner" style="background-image: url(/images/projects/kiva-paypal-responsive.jpg); background-position: 25% 50%;">
-    <div>
+  <div class="banner banner_details" style="background-image: url(/images/projects/kiva-paypal-responsive.jpg); background-position: 25% 50%;">
+    <div class="banner__title-container">
       <h1 class="banner__title">10 Days of Lending</h1>
       <p class="banner__with">with the teams at <a href="https://www.paypal.com/stories/us/paypal-kiva-celebrating-ten-years-of-making-a-difference">PayPal</a>, <a href="https://www.kiva.org">Kiva</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
@@ -79,9 +79,9 @@ title: 10 Days of Lending
 
   </div>
 
-  <a href="/good" class="banner next" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg); background-size: cover; background-position: 50% 50%;">
-    <div>
-      <h2>Next project →</h2>
+  <a href="/good" class="banner banner_next" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg); background-size: cover; background-position: 50% 50%;">
+    <div class="banner__next-project-container">
+      <h2 class="banner__next-project">Next project →</h2>
     </div>
     <div class="banner__title-container">
       <h1 class="banner__title">GOOD Worldwide</h1>
