--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -5,8 +5,8 @@ title: OK the Store
 
 {% include ahoy.html %}
 
-  <div class="banner" style="background-image: url(/images/projects/ok-the-store.jpg)">
-    <div>
+  <div class="banner banner_details" style="background-image: url(/images/projects/ok-the-store.jpg)">
+    <div class="banner__title-container">
       <h1 class="banner__title">OK the Store</h1>
       <p class="banner__with">with the team at <a href="https://barrelstrengthdesign.com">Barrel Strength Design</a></p>
     </div>
@@ -89,9 +89,9 @@ title: OK the Store
 
   </div>
 
-  <a href="/jj-burns" class="banner next" style="background-image: url(/images/projects/jj-burns.jpg)">
-    <div>
-      <h2>Next project →</h2>
+  <a href="/jj-burns" class="banner banner_next" style="background-image: url(/images/projects/jj-burns.jpg)">
+    <div class="banner__next-project-container">
+      <h2 class="banner__next-project">Next project →</h2>
     </div>
     <div class="banner__title-container">
       <h1 class="banner__title">JJ Burns &amp; Company</h1>
