--- a/good-fest.html
+++ b/good-fest.html
@@ -5,8 +5,8 @@ title: GOOD Fest
 
 {% include ahoy.html %}
 
-  <div class="banner" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
-    <div>
+  <div class="banner banner_details" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
+    <div class="banner__title-container">
       <h1 class="banner__title">GOOD Fest</h1>
       <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a>, <span class="phrase">sponsored by Google</span></p>
     </div>
@@ -152,9 +152,9 @@ title: GOOD Fest
 
   </div>
 
-  <a href="/grand-park" class="banner next" style="background-image: url(/images/projects/july4.png)">
-    <div>
-      <h2>Next project →</h2>
+  <a href="/grand-park" class="banner banner_next" style="background-image: url(/images/projects/july4.png)">
+    <div class="banner__next-project-container">
+      <h2 class="banner__next-project">Next project →</h2>
     </div>
     <div class="banner__title-container">
       <h1 class="banner__title">4th of July <span class="phrase">at Grand Park</span></h1>
