--- a/grand-park.html
+++ b/grand-park.html
@@ -5,8 +5,8 @@ title: 4th of July at Grand Park
 
 {% include ahoy.html %}
 
-  <div class="banner" style="background-image: url(/images/projects/july4-responsive.jpg); background-position: 25% 50%;">
-    <div>
+  <div class="banner banner_details" style="background-image: url(/images/projects/july4-responsive.jpg); background-position: 25% 50%;">
+    <div class="banner__title-container">
       <h1 class="banner__title">4th of July <span class="phrase">at Grand Park</span></h1>
       <p class="banner__with">with the team at <a href="https://www.musiccenter.org">The Music Center</a></p>
     </div>
@@ -97,9 +97,9 @@ title: 4th of July at Grand Park
 
   </div>
 
-  <a href="/kiva" class="banner next" style="background-image: url(/images/projects/1-hW4eUha20IP4hfd0z5uoDg.jpeg)">
-    <div>
-      <h2>Next project →</h2>
+  <a href="/kiva" class="banner banner_next" style="background-image: url(/images/projects/1-hW4eUha20IP4hfd0z5uoDg.jpeg)">
+    <div class="banner__next-project-container">
+      <h2 class="banner__next-project">Next project →</h2>
     </div>
     <div class="banner__title-container">
       <h1 class="banner__title">10 Days of Lending</h1>
