--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ class: home
 
   <ul class="projects">
     <li>
-      <a href="/good-fest" class="banner" style="background-image: url(/images/projects/goodfest-shows.png); background-position: bottom;">
+      <a href="/good-fest" class="banner banner_list" style="background-image: url(/images/projects/goodfest-shows.png); background-position: bottom;">
         <div class="banner__title-container">
           <h3 class="banner__title">GOOD Fest</h3>
           <p class="banner__with">Google &amp; GOOD Worldwide</p>
@@ -45,7 +45,7 @@ class: home
       </a>
     </li>
     <li>
-      <a href="/grand-park" class="banner" style="background-image: url(/images/projects/july4.png)">
+      <a href="/grand-park" class="banner banner_list" style="background-image: url(/images/projects/july4.png)">
         <div class="banner__title-container">
           <h3 class="banner__title">4th of July <span class="phrase">at Grand Park</span></h3>
           <p class="banner__with"><span class="phrase">The Music Center</span></p>
@@ -53,7 +53,7 @@ class: home
       </a>
     </li>
     <li>
-      <a href="/kiva" class="banner" style="background-image: url(/images/projects/kiva-timeline.png)">
+      <a href="/kiva" class="banner banner_list" style="background-image: url(/images/projects/kiva-timeline.png)">
         <div class="banner__title-container">
           <h3 class="banner__title">10 Days of Lending</h3>
           <p class="banner__with">PayPal, Kiva, &amp; GOOD Worldwide</p>
@@ -61,7 +61,7 @@ class: home
       </a>
     </li>
     <li>
-      <a href="/good" class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
+      <a href="/good" class="banner banner_list" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
         <div class="banner__title-container">
           <h3 class="banner__title">GOOD Worldwide</h3>
           <p class="banner__with"><span class="phrase">Type/Code</span></p>
@@ -69,7 +69,7 @@ class: home
       </a>
     </li>
     <li>
-      <a href="/food-oasis" class="banner" style="background-image: url(/images/projects/food-oasis-map.png)">
+      <a href="/food-oasis" class="banner banner_list" style="background-image: url(/images/projects/food-oasis-map.png)">
         <div class="banner__title-container">
           <h3 class="banner__title">Food Oasis <span class="phrase">Los Angeles</span></h3>
           <p class="banner__with"><span class="phrase">Code for America</span></p>
@@ -77,7 +77,7 @@ class: home
       </a>
     </li>
     <li>
-      <a href="/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
+      <a href="/ctzn-app" class="banner banner_list" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
         <div class="banner__title-container">
           <h3 class="banner__title">CTZN App</h3>
           <p class="banner__with"><span class="phrase">GOOD Worldwide</span></p>
@@ -85,14 +85,14 @@ class: home
       </a>
     </li>
     <li>
-      <a href="/good-community" class="banner" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: -30px 50%;">
+      <a href="/good-community" class="banner banner_list" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: -30px 50%;">
         <div class="banner__title-container">
           <h3 class="banner__title">GOOD Community</h3>
         </div>
       </a>
     </li>
     <li>
-      <a href="/ok-the-store" class="banner" style="background-image: url(/images/projects/ok-the-store-pencils.jpg)">
+      <a href="/ok-the-store" class="banner banner_list" style="background-image: url(/images/projects/ok-the-store-pencils.jpg)">
         <div class="banner__title-container">
           <h3 class="banner__title">OK the Store</h3>
           <p class="banner__with"><span class="phrase">Barrel Strength Design</span></p>
@@ -100,7 +100,7 @@ class: home
       </a>
     </li>
     <li>
-      <a href="/jj-burns" class="banner" style="background-image: url(/images/projects/fahrenheit-jjburns.jpg); background-position: 2% 50%;">
+      <a href="/jj-burns" class="banner banner_list" style="background-image: url(/images/projects/fahrenheit-jjburns.jpg); background-position: 2% 50%;">
         <div class="banner__title-container">
           <h3 class="banner__title">JJ Burns &amp; Company</h3>
           <p class="banner__with"><span class="phrase">Fahrenheit Studio</span></p>
@@ -108,7 +108,7 @@ class: home
       </a>
     </li>
     <li>
-      <a href="/fahrenheit" class="banner" style="background-image: url(/images/projects/fahrenheit-zansaar.jpg)">
+      <a href="/fahrenheit" class="banner banner_list" style="background-image: url(/images/projects/fahrenheit-zansaar.jpg)">
         <div class="banner__title-container">
           <h3 class="banner__title">Fahrenheit Studio</h3>
         </div>
