--- a/jj-burns.html
+++ b/jj-burns.html
@@ -5,8 +5,8 @@ title: JJ Burns
 
 {% include ahoy.html %}
 
-  <div class="banner" style="background-image: url(/images/projects/jj-burns.jpg); background-position: left;">
-    <div>
+  <div class="banner banner_details" style="background-image: url(/images/projects/jj-burns.jpg); background-position: left;">
+    <div class="banner__title-container">
       <h1 class="banner__title">JJ Burns &amp; Company</h1>
       <p class="banner__with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
     </div>
@@ -93,9 +93,9 @@ title: JJ Burns
 
   </div>
 
-  <a href="/fahrenheit" class="banner next" style="background-image: url(/images/projects/fahrenheit.jpg)">
-    <div>
-      <h2>Next project →</h2>
+  <a href="/fahrenheit" class="banner banner_next" style="background-image: url(/images/projects/fahrenheit.jpg)">
+    <div class="banner__next-project-container">
+      <h2 class="banner__next-project">Next project →</h2>
     </div>
     <div class="banner__title-container">
       <h1 class="banner__title">Fahrenheit Studio</h1>
