--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -7,7 +7,7 @@ title: CTZN App
 
   <div class="banner banner_details" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg)">
     <div class="banner__title-container">
-      <h1 class="banner__title">CTZN App</h1>
+      <h1 class="banner__title banner__title_details">CTZN App</h1>
       <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
     <p class="credit"><a href="https://www.linkedin.com/in/benisonchoi">Photo by <span>Benison Choi</span></a></p>
