--- a/food-oasis.html
+++ b/food-oasis.html
@@ -7,7 +7,7 @@ title: Food Oasis Los Angeles
 
   <div class="banner banner_details" style="background-image: url(/images/projects/food-oasis-responsive.jpg); background-position: 25% 50%;">
     <div class="banner__title-container">
-      <h1 class="banner__title">Food Oasis <span class="phrase">Los Angeles</span></h1>
+      <h1 class="banner__title banner__title_details">Food Oasis <span class="phrase">Los Angeles</span></h1>
       <p class="banner__with">with the volunteers at <a href="http://hackforla.nationbuilder.com/about" class="phrase">Code for America</a></p>
     </div>
   </div>
