--- a/good-community.html
+++ b/good-community.html
@@ -7,7 +7,7 @@ title: GOOD Community
 
   <div class="banner banner_details" style="background-image: url(/images/projects/good-community.png); background-position: 2% 50%;">
     <div class="banner__title-container">
-      <h1 class="banner__title">GOOD Community</h1>
+      <h1 class="banner__title banner__title_details">GOOD Community</h1>
       <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
   </div>
