--- a/good-fest.html
+++ b/good-fest.html
@@ -7,7 +7,7 @@ title: GOOD Fest
 
   <div class="banner banner_details" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
     <div class="banner__title-container">
-      <h1 class="banner__title">GOOD Fest</h1>
+      <h1 class="banner__title banner__title_details">GOOD Fest</h1>
       <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a>, <span class="phrase">sponsored by Google</span></p>
     </div>
   </div>
