--- a/good.html
+++ b/good.html
@@ -7,7 +7,7 @@ title: GOOD Worldwide
 
   <div class="banner banner_details" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
     <div class="banner__title-container">
-      <h1 class="banner__title">GOOD Worldwide</h1>
+      <h1 class="banner__title banner__title_details">GOOD Worldwide</h1>
       <p class="banner__with">with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
     <p class="credit"><a href="http://www.musiccenter.org">Photo by <span>The Music Center</span></a></p>
