--- a/jj-burns.html
+++ b/jj-burns.html
@@ -7,7 +7,7 @@ title: JJ Burns
 
   <div class="banner banner_details" style="background-image: url(/images/projects/jj-burns.jpg); background-position: left;">
     <div class="banner__title-container">
-      <h1 class="banner__title">JJ Burns &amp; Company</h1>
+      <h1 class="banner__title banner__title_details">JJ Burns &amp; Company</h1>
       <p class="banner__with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
     </div>
   </div>
