--- a/kiva.html
+++ b/kiva.html
@@ -7,7 +7,7 @@ title: 10 Days of Lending
 
   <div class="banner banner_details" style="background-image: url(/images/projects/kiva-paypal-responsive.jpg); background-position: 25% 50%;">
     <div class="banner__title-container">
-      <h1 class="banner__title">10 Days of Lending</h1>
+      <h1 class="banner__title banner__title_details">10 Days of Lending</h1>
       <p class="banner__with">with the teams at <a href="https://www.paypal.com/stories/us/paypal-kiva-celebrating-ten-years-of-making-a-difference">PayPal</a>, <a href="https://www.kiva.org">Kiva</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
   </div>
