--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -7,7 +7,7 @@ title: OK the Store
 
   <div class="banner banner_details" style="background-image: url(/images/projects/ok-the-store.jpg)">
     <div class="banner__title-container">
-      <h1 class="banner__title">OK the Store</h1>
+      <h1 class="banner__title banner__title_details">OK the Store</h1>
       <p class="banner__with">with the team at <a href="https://barrelstrengthdesign.com">Barrel Strength Design</a></p>
     </div>
   </div>
