--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -7,7 +7,7 @@ title: Fahrenheit Studio
 
   <div class="banner banner_details" style="background-image: url(/images/projects/fahrenheit.jpg); background-position: 25% 50%;">
     <div class="banner__title-container">
-      <h1 class="banner__title">Fahrenheit Studio</h1>
+      <h1 class="banner__title banner__title_details">Fahrenheit Studio</h1>
       <p class="banner__with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
     </div>
   </div>
