--- a/grand-park.html
+++ b/grand-park.html
@@ -7,7 +7,7 @@ title: 4th of July at Grand Park
 
   <div class="banner banner_details" style="background-image: url(/images/projects/july4-responsive.jpg); background-position: 25% 50%;">
     <div class="banner__title-container">
-      <h1 class="banner__title">4th of July <span class="phrase">at Grand Park</span></h1>
+      <h1 class="banner__title banner__title_details">4th of July <span class="phrase">at Grand Park</span></h1>
       <p class="banner__with">with the team at <a href="https://www.musiccenter.org">The Music Center</a></p>
     </div>
   </div>
