--- a/good-community.html
+++ b/good-community.html
@@ -124,8 +124,8 @@ title: GOOD Community
     <div class="banner__next-project-container">
       <h2 class="banner__next-project">Next project →</h2>
     </div>
-    <div class="banner__title-container">
-      <h1 class="banner__title">OK the Store</h1>
-      <p class="banner__with">with the team at <span class="phrase">Barrel Strength Design</span></p>
+    <div class="banner__title-container banner__title-container_link banner__title-container_next">
+      <h3 class="banner__title banner__title_link">OK the Store</h3>
+      <p class="banner__with banner__with_link">with the team at <span class="phrase">Barrel Strength Design</span></p>
     </div>
   </a>
