--- a/good.html
+++ b/good.html
@@ -114,8 +114,8 @@ title: GOOD Worldwide
     <div class="banner__next-project-container">
       <h2 class="banner__next-project">Next project →</h2>
     </div>
-    <div class="banner__title-container">
-      <h1 class="banner__title">Food Oasis <span class="phrase">Los Angeles</span></h1>
-      <p class="banner__with">with the volunteers at <span class="phrase">Code for America</span></p>
+    <div class="banner__title-container banner__title-container_link banner__title-container_next">
+      <h3 class="banner__title banner__title_link">Food Oasis <span class="phrase">Los Angeles</span></h3>
+      <p class="banner__with banner__with_link">with the volunteers at <span class="phrase">Code for America</span></p>
     </div>
   </a>
