--- a/grand-park.html
+++ b/grand-park.html
@@ -101,8 +101,8 @@ title: 4th of July at Grand Park
     <div class="banner__next-project-container">
       <h2 class="banner__next-project">Next project →</h2>
     </div>
-    <div class="banner__title-container">
-      <h1 class="banner__title">10 Days of Lending</h1>
-      <p class="banner__with">with the teams at Kiva and <span class="phrase">GOOD Worldwide</span></p>
+    <div class="banner__title-container banner__title-container_link banner__title-container_next">
+      <h3 class="banner__title banner__title_link">10 Days of Lending</h3>
+      <p class="banner__with banner__with_link">with the teams at Kiva and <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
