--- a/jj-burns.html
+++ b/jj-burns.html
@@ -97,8 +97,8 @@ title: JJ Burns
     <div class="banner__next-project-container">
       <h2 class="banner__next-project">Next project →</h2>
     </div>
-    <div class="banner__title-container">
-      <h1 class="banner__title">Fahrenheit Studio</h1>
-      <p class="banner__with">with the team at <span class="phrase">Fahrenheit Studio</span></p>
+    <div class="banner__title-container banner__title-container_link banner__title-container_next">
+      <h3 class="banner__title banner__title_link">Fahrenheit Studio</h3>
+      <p class="banner__with banner__with_link">with the team at <span class="phrase">Fahrenheit Studio</span></p>
     </div>
   </a>
