--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -94,8 +94,8 @@ title: Fahrenheit Studio
     <div class="banner__next-project-container">
       <h2 class="banner__next-project">Next project →</h2>
     </div>
-    <div class="banner__title-container">
-      <h1 class="banner__title">GOOD Fest</h1>
-      <p class="banner__with">with the team at <span class="phrase">GOOD Worldwide,</span> <span class="phrase">sponsored by Google</span></p>
+    <div class="banner__title-container banner__title-container_link banner__title-container_next">
+      <h3 class="banner__title banner__title_link">GOOD Fest</h3>
+      <p class="banner__with banner__with_link">with the team at <span class="phrase">GOOD Worldwide,</span> <span class="phrase">sponsored by Google</span></p>
     </div>
   </a>
