--- a/food-oasis.html
+++ b/food-oasis.html
@@ -155,8 +155,8 @@ title: Food Oasis Los Angeles
     <div class="banner__next-project-container">
       <h2 class="banner__next-project">Next project →</h2>
     </div>
-    <div class="banner__title-container">
-      <h1 class="banner__title">CTZN App</h1>
-      <p class="banner__with">with the team at <span class="phrase">GOOD Worldwide</span></p>
+    <div class="banner__title-container banner__title-container_link banner__title-container_next">
+      <h3 class="banner__title banner__title_link">CTZN App</h3>
+      <p class="banner__with banner__with_link">with the team at <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
