--- a/good-fest.html
+++ b/good-fest.html
@@ -156,8 +156,8 @@ title: GOOD Fest
     <div class="banner__next-project-container">
       <h2 class="banner__next-project">Next project →</h2>
     </div>
-    <div class="banner__title-container">
-      <h1 class="banner__title">4th of July <span class="phrase">at Grand Park</span></h1>
-      <p class="banner__with">with the team at <span class="phrase">The Music Center</span></p>
+    <div class="banner__title-container banner__title-container_link banner__title-container_next">
+      <h3 class="banner__title banner__title_link">4th of July <span class="phrase">at Grand Park</span></h3>
+      <p class="banner__with banner__with_link">with the team at <span class="phrase">The Music Center</span></p>
     </div>
   </a>
