--- a/kiva.html
+++ b/kiva.html
@@ -83,8 +83,8 @@ title: 10 Days of Lending
     <div class="banner__next-project-container">
       <h2 class="banner__next-project">Next project →</h2>
     </div>
-    <div class="banner__title-container">
-      <h1 class="banner__title">GOOD Worldwide</h1>
-      <p class="banner__with">with the teams at <span class="phrase">Type/Code</span> and <span class="phrase">GOOD Worldwide</span></p>
+    <div class="banner__title-container banner__title-container_link banner__title-container_next">
+      <h3 class="banner__title banner__title_link">GOOD Worldwide</h3>
+      <p class="banner__with banner__with_link">with the teams at <span class="phrase">Type/Code</span> and <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
