--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ class: home
       </li>
       <li>
         <h2>Pattern libraries</h2>
-        <p>During the development process, I’ll look for and document <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">resuable code</a>. This will help you create additional pages and features for your project in the future.</p>
+        <p>During the development process, I’ll look for and document <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">reusable code</a>. This will help you create additional pages and features for your project in the future.</p>
       </li>
     </ul>
 
