Tweak home page text

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ class: home
       -->
       <li>
         <h2>Universal design</h2>
-        <p>From your ideas, sketches or high-fidelity compositions, I’ll make a fast, lightweight and <a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">robust user interface</a>—that’s responsive and accessible to anyone in your audience—built with production-ready HTML, CSS and JavaScript.</p>
+        <p>From your ideas, sketches or high-fidelity compositions, I’ll make a fast, lightweight and robust <a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">user interface</a>—that’s responsive and accessible to anyone in your audience—built with production-ready HTML, CSS and JavaScript.</p>
       </li>
       <li>
         <h2>Pattern libraries</h2>
