Update home page copy.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ class: home
       </span>
     </a>
 
-    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user interface developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
+    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user experience developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
-    <h2>I partner with designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
+    <h2>I partner with designers &amp; engineers to create products that people <span class="phrase">love to use.</span></h2>
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re making a web site or application, I can assist with prototypes, <a href="#services">universal design</a>, pattern libraries, <span class="phrase">and more!</span></p>
+    <p>If you’re making a web site or application, I can assist with prototypes, universal design, pattern libraries, <a href="#services" aria-label="Services">and more</a>!</p>
 
     {% comment %}
     <!--
