Update Food Oasis case study.

--- a/food-oasis.html
+++ b/food-oasis.html
@@ -22,7 +22,7 @@ title: Food Oasis Los Angeles
     <p>We put a data-driven map on the web, within two weeks of the start of the project. And we’ve been iterating on it ever since, adding additional kinds of food locations and features like searching and filtering by open hours.</p>
     -->
 
-    <p>I’ve been involved by writing code for the user interface, maintaining the <a href="https://pages.github.com">static web site</a>, writing and editing <a href="https://github.com/foodoasisla/site/issues">issues</a>, and providing developer support for our weekly volunteers.</p>
+    <p>I’ve been involved by writing code for the user interface, maintaining the <a href="https://pages.github.com">static web site</a>, and providing developer support for our weekly volunteers—by writing <a href="https://github.com/foodoasisla/site/issues">issues</a>, documenting processes, making improvements to the development environment, pair programming, responding to questions, and reviewing pull requests.</p>
 
     <p>My role has also involved creating prototypes, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, importing and managing data with Node.js, setting up hosting and content management with <a href="https://jekyllrb.com">Jekyll</a> and GitHub Pages, and configuring domains, redirects, and caching with Cloudflare.</p>
 
