Revert part of my last commit.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ class: home
       </span>
     </a>
 
-    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user interface developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
+    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user experience developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
-    <h2>I partner with designers &amp; engineers to make products for the Web, that are pleasing to users and <span class="phrase">built to last.</span></h2>
+    <h2>I work with designers &amp; engineers to make robust products for the Web, that people <span class="phrase">love to use.</span></h2>
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
