Tweak home page copy.

--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@ class: home
       </li>
     </ul>
 
-    <h2>I can also assist with…</h2>
+    <h2>I can also help with…</h2>
     <p>…browser/device compatibility, testing and improving accessibility, optimizing front end code for performance, integration with templates, and responsive HTML emails.</p>
   </div>
 
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I’m available to help on a web project in the fall &amp; winter of 2017. <!--🍃🍂🍁--></p>
+    <p>I’m available to work on a web project in the fall &amp; winter of 2017. <!--🍃🍂🍁--></p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
