Update images on home page.

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -134,7 +134,7 @@ figures:
 
   </div>
 
-  <a href="/good-community" class="banner banner_next" style="background-image: url(/images/good-community/2048-wide/poster.jpg); background-size: cover; background-position: 2% 50%;">
+  <a href="/good-community" class="banner banner_next" style="background-image: url(/images/good-community/2048-wide/poster-b.jpg);">
     <div class="banner__next-project-container">
       <h2 class="banner__next-project">Next project →</h2>
     </div>
