--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@ title: Style & Code for the Web, by Jim Thoburn
 emoji_title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
 
 class: home
+
+projects:
+- name: GOOD Fest
+  company: Google & GOOD Worldwide
+  image: /images/good-fest/2048-wide/poster-b.jpg
+  image_style: "background-position: bottom;"
+- name: 4th of July <span class="phrase">at Grand Park</span>
+  company: The Music Center
+  image: /images/grand-park/2048-wide/poster-a.jpg
+- name: 10 Days of Lending
+  company: PayPal, Kiva, & GOOD Worldwide
+  image: /images/kiva/2048-wide/poster-c.jpg
+- name: GOOD Worldwide
+  company: Type/Code
+  image: /images/good/2048-wide/poster.jpg
+- name: Food Oasis <span class="phrase">Los Angeles</span>
+  company: <span class="phrase">Code for America</span>
+  image: /images/food-oasis/2048-wide/poster-a.jpg
+- name: CTZN App
+  company: GOOD Worldwide
+  image: /images/ctzn-app/2048-wide/poster.jpg
+  image_style: "background-position: 50% 25%;"
+- name: GOOD Community
+  image: /images/good-community/2048-wide/poster-b.jpg
+- name: OK the Store
+  company: <span class="phrase">Barrel Strength Design</span>
+  image: /images/ok-the-store/2048-wide/poster-a.jpg
+- name: JJ Burns & Company
+  company: <span class="phrase">Fahrenheit Studio</span>
+  image: /images/jj-burns/2048-wide/poster-a.jpg
+  image_style: "background-position: 2% 50%;"
+- name: Fahrenheit Studio
+  image: /images/fahrenheit/2048-wide/poster-a.jpg
 ---
 
   <div class="container introduction">
@@ -36,84 +69,18 @@ class: home
   </div>
 
   <ul class="projects">
+    {% for project in page.projects %}
     <li>
-      <a href="/good-fest" class="banner banner_list" style="background-image: url(/images/good-fest/2048-wide/poster-b.jpg); background-position: bottom;">
+      <a href="/good-fest" class="banner banner_list" style="background-image: url({{ project.image }}); {{ project.image_style }}">
         <div class="banner__title-container banner__title-container_link banner__title-container_list">
-          <h3 class="banner__title banner__title_link">GOOD Fest</h3>
-          <p class="banner__with banner__with_link">Google &amp; GOOD Worldwide</p>
+          <h3 class="banner__title banner__title_link">{{ project.name }}</h3>
+          {% if project.company %}
+          <p class="banner__with banner__with_link">{{ project.company }}</p>
+          {% endif %}
         </div>
       </a>
     </li>
-    <li>
-      <a href="/grand-park" class="banner banner_list" style="background-image: url(/images/grand-park/2048-wide/poster-a.jpg)">
-        <div class="banner__title-container banner__title-container_link banner__title-container_list">
-          <h3 class="banner__title banner__title_link">4th of July <span class="phrase">at Grand Park</span></h3>
-          <p class="banner__with banner__with_link"><span class="phrase">The Music Center</span></p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/kiva" class="banner banner_list" style="background-image: url(/images/kiva/2048-wide/poster-c.jpg)">
-        <div class="banner__title-container banner__title-container_link banner__title-container_list">
-          <h3 class="banner__title banner__title_link">10 Days of Lending</h3>
-          <p class="banner__with banner__with_link">PayPal, Kiva, &amp; GOOD Worldwide</p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/good" class="banner banner_list" style="background-image: url(/images/good/2048-wide/poster.jpg)">
-        <div class="banner__title-container banner__title-container_link banner__title-container_list">
-          <h3 class="banner__title banner__title_link">GOOD Worldwide</h3>
-          <p class="banner__with banner__with_link"><span class="phrase">Type/Code</span></p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/food-oasis" class="banner banner_list" style="background-image: url(/images/food-oasis/2048-wide/poster-a.jpg)">
-        <div class="banner__title-container banner__title-container_link banner__title-container_list">
-          <h3 class="banner__title banner__title_link">Food Oasis <span class="phrase">Los Angeles</span></h3>
-          <p class="banner__with banner__with_link"><span class="phrase">Code for America</span></p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/ctzn-app" class="banner banner_list" style="background-image: url(/images/ctzn-app/2048-wide/poster.jpg); background-position: 50% 25%;">
-        <div class="banner__title-container banner__title-container_link banner__title-container_list">
-          <h3 class="banner__title banner__title_link">CTZN App</h3>
-          <p class="banner__with banner__with_link"><span class="phrase">GOOD Worldwide</span></p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/good-community" class="banner banner_list" style="background-image: url(/images/good-community/2048-wide/poster.jpg); background-size: cover; background-position: -30px 50%;">
-        <div class="banner__title-container banner__title-container_link banner__title-container_list">
-          <h3 class="banner__title banner__title_link">GOOD Community</h3>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/ok-the-store" class="banner banner_list" style="background-image: url(/images/ok-the-store/2048-wide/poster-a.jpg)">
-        <div class="banner__title-container banner__title-container_link banner__title-container_list">
-          <h3 class="banner__title banner__title_link">OK the Store</h3>
-          <p class="banner__with banner__with_link"><span class="phrase">Barrel Strength Design</span></p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/jj-burns" class="banner banner_list" style="background-image: url(/images/jj-burns/2048-wide/poster-a.jpg); background-position: 2% 50%;">
-        <div class="banner__title-container banner__title-container_link banner__title-container_list">
-          <h3 class="banner__title banner__title_link">JJ Burns &amp; Company</h3>
-          <p class="banner__with banner__with_link"><span class="phrase">Fahrenheit Studio</span></p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/fahrenheit" class="banner banner_list" style="background-image: url(/images/fahrenheit/2048-wide/poster-a.jpg)">
-        <div class="banner__title-container banner__title-container_link banner__title-container_list">
-          <h3 class="banner__title banner__title_link">Fahrenheit Studio</h3>
-        </div>
-      </a>
-    </li>
+    {% endfor %}
   </ul>
 
   <div class="container" id="services">
