--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ class: home
 
 projects:
 - name: GOOD Fest
-  company: Google & GOOD Worldwide
+  company: Google &amp; GOOD Worldwide
   image: /images/good-fest/2048-wide/poster-b.jpg
   image_style: "background-position: bottom;"
 - name: 4th of July <span class="phrase">at Grand Park</span>
   company: The Music Center
   image: /images/grand-park/2048-wide/poster-a.jpg
 - name: 10 Days of Lending
-  company: PayPal, Kiva, & GOOD Worldwide
+  company: PayPal, Kiva, &amp; GOOD Worldwide
   image: /images/kiva/2048-wide/poster-c.jpg
 - name: GOOD Worldwide
   company: Type/Code
@@ -29,10 +29,11 @@ projects:
   image_style: "background-position: 50% 25%;"
 - name: GOOD Community
   image: /images/good-community/2048-wide/poster-b.jpg
+  image_style: "background-position: bottom;"
 - name: OK the Store
   company: <span class="phrase">Barrel Strength Design</span>
   image: /images/ok-the-store/2048-wide/poster-a.jpg
-- name: JJ Burns & Company
+- name: JJ Burns &amp; Company
   company: <span class="phrase">Fahrenheit Studio</span>
   image: /images/jj-burns/2048-wide/poster-a.jpg
   image_style: "background-position: 2% 50%;"
